Import new version of JPC source (ZIP MD5: 6886c11743aeab12eb31c286ef3e4c3d)