@@ -4,7 +4,7 @@
 
     A project from the Physics Dept, The University of Oxford
 
-    Copyright (C) 2007 Isis Innovation Limited
+    Copyright (C) 2007-2009 Isis Innovation Limited
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License version 2 as published by
@@ -18,40 +18,34 @@
     You should have received a copy of the GNU General Public License along
     with this program; if not, write to the Free Software Foundation, Inc.,
     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
- 
+
     Details (including contact information) can be found at: 
 
-    www.physics.ox.ac.uk/jpc
+    www-jpc.physics.ox.ac.uk
 */
 
 package org.jpc.debugger;
 
 import java.util.*;
-import java.io.*;
-import java.lang.reflect.*;
-import java.awt.*;
+import java.awt.Dimension;
 import java.awt.event.*;
+import java.util.logging.*;
 
 import javax.swing.*;
-import javax.swing.table.*;
-import javax.swing.event.*;
-import javax.swing.text.*;
-import javax.swing.undo.*;
 
 import org.jpc.debugger.util.*;
-import org.jpc.emulator.*;
-import org.jpc.emulator.processor.*;
-import org.jpc.emulator.motherboard.*;
-import org.jpc.emulator.memory.*;
+import org.jpc.emulator.memory.AddressSpace;
 import org.jpc.emulator.memory.codeblock.*;
 import org.jpc.emulator.memory.codeblock.optimised.*;
 
 public class OpcodeFrequencyFrame extends UtilityFrame implements PCListener, ActionListener, CodeBlockListener, Comparator
 {
+    private static final Logger LOGGING = Logger.getLogger(CodeBlockFrequencyFrame.class.getName());
+    
     private long unknownBlockCount, unknownX86Count;
 
     private CodeBlockRecord record;
-    private HashMap<Integer, OpcodeEntry> frequencies;
+    private Map<Integer, OpcodeEntry> frequencies;
     private String[] uCodeNames;
 
     private OpcodeEntry[] frequentCodes;
@@ -96,7 +90,7 @@ public class OpcodeFrequencyFrame extends UtilityFrame implements PCListener, Ac
             }
         }
         
-        public int hashcode()
+        public int hashCode()
         {
             return op;
         }
@@ -109,6 +103,7 @@ public class OpcodeFrequencyFrame extends UtilityFrame implements PCListener, Ac
 
             return true;
         }
+        
 
         public String toString()
         {
@@ -123,7 +118,7 @@ public class OpcodeFrequencyFrame extends UtilityFrame implements PCListener, Ac
     public synchronized void codeBlockExecuted(int address, AddressSpace memory, CodeBlock block)
     {
 	while (block instanceof AbstractCodeBlockWrapper)
-	    block = ((AbstractCodeBlockWrapper)block).getBlock();
+	    block = ((AbstractCodeBlockWrapper)block).getTargetBlock();
 
 	if (!(block instanceof RealModeUBlock))
         {
@@ -138,11 +133,11 @@ public class OpcodeFrequencyFrame extends UtilityFrame implements PCListener, Ac
             int[] uCodes = b.getMicrocodes();
             for (int i=0; i<uCodes.length; i++)
             {
-                OpcodeEntry e = frequencies.get(new Integer(uCodes[i]));
+                OpcodeEntry e = frequencies.get(Integer.valueOf(uCodes[i]));
                 if (e == null)
                 {
                     e = new OpcodeEntry(i, uCodes, b);
-                    frequencies.put(new Integer(uCodes[i]), e);
+                    frequencies.put(Integer.valueOf(uCodes[i]), e);
                 }
                 // if we are on an immediate byte increment i again to skip the following number
                 String end = e.opName;
@@ -154,10 +149,7 @@ public class OpcodeFrequencyFrame extends UtilityFrame implements PCListener, Ac
         }
         catch (Exception e)
         {
-            System.out.println("-----------------------------");
-            System.out.println("WARNING: "+e+" in Frequency Calculation");
-            System.out.println(block.getClass()+"\n"+block);
-            e.printStackTrace();
+            LOGGING.log(Level.WARNING, "Error calculating freuqency of block: " + block,e);
         }
     }
 
@@ -168,12 +160,12 @@ public class OpcodeFrequencyFrame extends UtilityFrame implements PCListener, Ac
             record.setCodeBlockListener(null);
     }
 
-    public void PCCreated()
+    public void pcCreated()
     {
         refreshDetails();
     }
 
-    public void PCDisposed()
+    public void pcDisposed()
     {
         record = null;
         model.fireTableDataChanged();
@@ -215,7 +207,7 @@ public class OpcodeFrequencyFrame extends UtilityFrame implements PCListener, Ac
             record.setCodeBlockListener(this);
 
             unknownBlockCount = unknownX86Count = 0;
-            frequencies = new HashMap<Integer, OpcodeEntry>();
+            frequencies = new HashMap();
         }
 
         Object[] buffer = frequencies.values().toArray();
@@ -248,11 +240,11 @@ public class OpcodeFrequencyFrame extends UtilityFrame implements PCListener, Ac
             switch (column)
             {
 	    case 0:
-		return new Integer(row);
+		return Integer.valueOf(row);
             case 1:
                 return e.toString();
             case 2:
-                return new Integer(e.frequency);
+                return Integer.valueOf(e.frequency);
             }
 
             return null;
