@@ -4,7 +4,7 @@
 
     A project from the Physics Dept, The University of Oxford
 
-    Copyright (C) 2007 Isis Innovation Limited
+    Copyright (C) 2007-2009 Isis Innovation Limited
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License version 2 as published by
@@ -18,49 +18,56 @@
     You should have received a copy of the GNU General Public License along
     with this program; if not, write to the Free Software Foundation, Inc.,
     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
- 
+
     Details (including contact information) can be found at: 
 
-    www.physics.ox.ac.uk/jpc
+    www-jpc.physics.ox.ac.uk
 */
 
 package org.jpc.emulator.memory;
 
-import java.util.*;
 import java.io.*;
+import java.util.*;
+import java.util.logging.*;
 
-import org.jpc.emulator.*;
-import org.jpc.emulator.memory.codeblock.*;
+import org.jpc.emulator.HardwareComponent;
 import org.jpc.emulator.processor.*;
 
+/**
+ * Class that implements the paging system used by an x86 MMU when in protected
+ * mode.
+ * @author Rhys Newman
+ * @author Chris Dennis
+ */
 public final class LinearAddressSpace extends AddressSpace implements HardwareComponent
 {
+    private static final Logger LOGGING = Logger.getLogger(LinearAddressSpace.class.getName());
+    
     private static final PageFaultWrapper PF_NOT_PRESENT_RU = new PageFaultWrapper(4);
     private static final PageFaultWrapper PF_NOT_PRESENT_RS = new PageFaultWrapper(0);
     private static final PageFaultWrapper PF_NOT_PRESENT_WU = new PageFaultWrapper(6);
     private static final PageFaultWrapper PF_NOT_PRESENT_WS = new PageFaultWrapper(2);
 
     private static final PageFaultWrapper PF_PROTECTION_VIOLATION_RU = new PageFaultWrapper(5);
-    private static final PageFaultWrapper PF_PROTECTION_VIOLATION_RS = new PageFaultWrapper(1);
     private static final PageFaultWrapper PF_PROTECTION_VIOLATION_WU = new PageFaultWrapper(7);
     private static final PageFaultWrapper PF_PROTECTION_VIOLATION_WS = new PageFaultWrapper(3);
 
-    private static final byte FOUR_M_GLOBAL = (byte) 0x03;
-    private static final byte FOUR_M = (byte) 0x02;
-    private static final byte FOUR_K_GLOBAL = (byte) 0x01;
+    private static final byte FOUR_M = (byte) 0x01;
     private static final byte FOUR_K = (byte) 0x00;
-
-    private static final byte IS_GLOBAL_MASK = (byte) 0x1;
-    private static final byte IS_4_M_MASK = (byte) 0x2;
 
     private boolean isSupervisor, globalPagesEnabled, pagingDisabled, pageCacheEnabled, writeProtectUserPages, pageSizeExtensions;
     private int baseAddress, lastAddress;
-    private AddressSpace target;
+    private PhysicalAddressSpace target;
 
-    private byte[] pageFlags;
-    private Hashtable nonGlobalPages;
+    private byte[] pageSize;
+    private final Set<Integer> nonGlobalPages;
     private Memory[] readUserIndex, readSupervisorIndex, writeUserIndex, writeSupervisorIndex, readIndex, writeIndex;
 
+    /**
+     * Constructs a <code>LinearAddressSpace</code> with paging initially disabled
+     * and a <code>PhysicalAddressSpace<code> that is defined during component
+     * configuration.
+     */
     public LinearAddressSpace()
     {
         baseAddress = 0;
@@ -70,19 +77,14 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
         writeProtectUserPages = false;
         pageSizeExtensions = false;
 
-        nonGlobalPages = new Hashtable();
-
-        pageFlags = new byte[INDEX_SIZE];
+        nonGlobalPages = new HashSet<Integer>();
+        
+        pageSize = new byte[INDEX_SIZE];
         for (int i=0; i < INDEX_SIZE; i++)
-            pageFlags[i] = FOUR_K;
-
-	readUserIndex = null;
-	readSupervisorIndex = null;
-	writeUserIndex = null;
-	writeSupervisorIndex = null;
+            pageSize[i] = FOUR_K;
     }
 
-    public void dumpState(DataOutput output) throws IOException
+    public void saveState(DataOutput output) throws IOException
     {
         output.writeBoolean(isSupervisor);
         output.writeBoolean(globalPagesEnabled);
@@ -92,63 +94,11 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
         output.writeBoolean(pageSizeExtensions);
         output.writeInt(baseAddress);
         output.writeInt(lastAddress);
-        output.writeInt(pageFlags.length);
-        output.write(pageFlags);
+        output.writeInt(pageSize.length);
+        output.write(pageSize);
         output.writeInt(nonGlobalPages.size());
-        Enumeration ee = nonGlobalPages.keys();
-        while (ee.hasMoreElements())
-        {
-            Integer key  = (Integer) ee.nextElement();
-            Integer value = (Integer) nonGlobalPages.get(key);
-            output.writeInt(key.intValue());
+        for (Integer value : nonGlobalPages) 
             output.writeInt(value.intValue());
-        }
-
-        dumpMemory(output, readUserIndex);
-        dumpMemory(output, readSupervisorIndex);
-        dumpMemory(output, writeUserIndex);
-        dumpMemory(output, writeSupervisorIndex);
-    }
-
-    private void dumpMemory(DataOutput output, Memory[] mem) throws IOException
-    {
-        long len;
-        byte[] temp = new byte[0];
-        if (mem == null)
-            output.writeInt(0);
-        else
-        {
-            output.writeInt(mem.length);
-            for (int i = 0; i< mem.length; i++)
-            {
-                if (mem[i] == null)
-                    output.writeLong(-1);
-                else
-                {
-                    len = mem[i].getSize();
-                    if (temp.length < (int) len)
-                        temp = new byte[(int) len];
-                    if (mem[i].isAllocated())
-                    {
-                        try
-                        {
-                            mem[i].copyContentsInto(0, temp, 0, (int) len);
-                        }
-                        catch (IllegalStateException e) 
-                        {
-                            len = 0;
-                        }
-                        output.writeLong(len);
-                        if (len > 0 )
-                            output.write(temp);
-                    }
-                    else
-                    {
-                        output.writeLong(0);
-                    }
-                }
-            }
-        }
     }
 
     public void loadState(DataInput input) throws IOException
@@ -163,53 +113,16 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
         baseAddress = input.readInt();
         lastAddress = input.readInt();
         int len = input.readInt();
-        pageFlags = new byte[len];
-        input.readFully(pageFlags,0,len);
+        pageSize = new byte[len];
+        input.readFully(pageSize,0,len);
         nonGlobalPages.clear();
         int count = input.readInt();
-        int key, value;
         for (int i=0; i < count; i++)
-        {
-            key = input.readInt();
-            value = input.readInt();
-            nonGlobalPages.put(new Integer(key), new Integer(value));
-        }
-
-        len = input.readInt();
-        //debug and enable loadMemory() if loading speed becomes an issue
-        //loadMemory(input, readUserIndex, len);
-        len = input.readInt();
-        //loadMemory(input, readSupervisorIndex, len);
-        len = input.readInt();
-        //loadMemory(input, writeUserIndex, len);
-        len = input.readInt();
-        //loadMemory(input, writeSupervisorIndex, len);
-
+            nonGlobalPages.add(Integer.valueOf(input.readInt()));
         setSupervisor(isSupervisor);
     }
 
-    private void loadMemory(DataInput input, Memory[] mem, int size) throws IOException
-    {
-        long len;
-        byte[] temp;
-        for (int i = 0; i< size; i++)
-        {
-            len = input.readLong();
-            if (len >= 0)
-            {
-                System.out.println(len);
-                temp = new byte[(int) len];
-                input.readFully(temp, 0, (int) len);
-                //if (mem[i] == null)
-                    //                    mem[i] = new ;
-                mem[i].copyContentsFrom(0, temp, 0, (int) len);
-            }
-            else
-                mem[i] = null;
-        }
-    }
-
-    private Memory[] getReadIndex()
+    private Memory[] createReadIndex()
     {
 	if (isSupervisor)
 	    return (readIndex = readSupervisorIndex = new Memory[INDEX_SIZE]);
@@ -217,7 +130,7 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
 	    return (readIndex = readUserIndex = new Memory[INDEX_SIZE]);
     }
 
-    private Memory[] getWriteIndex()
+    private Memory[] createWriteIndex()
     {
 	if (isSupervisor)
 	    return (writeIndex = writeSupervisorIndex = new Memory[INDEX_SIZE]);
@@ -230,7 +143,7 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
 	try {
 	    readIndex[index] = value;
 	} catch (NullPointerException e) {
-	    getReadIndex()[index] = value;
+	    createReadIndex()[index] = value;
 	}
     }
 
@@ -239,7 +152,7 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
 	try {
 	    return readIndex[index];
 	} catch (NullPointerException e) {
-	    return getReadIndex()[index];
+	    return createReadIndex()[index];
 	}
     }
 
@@ -248,7 +161,7 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
 	try {
 	    writeIndex[index] = value;
 	} catch (NullPointerException e) {
-	    getWriteIndex()[index] = value;
+	    createWriteIndex()[index] = value;
 	}
     }
 
@@ -257,20 +170,38 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
 	try {
 	    return writeIndex[index];
 	} catch (NullPointerException e) {
-	    return getWriteIndex()[index];
+	    return createWriteIndex()[index];
 	}
     }
 
+    /**
+     * Returns the linear address translated by this instance.  This is used 
+     * by the processor during the handling of a page fault.
+     * @return the last translated address.
+     */
     public int getLastWalkedAddress()
     {
         return lastAddress;
     }
 
+    /**
+     * Returns <code>true</code> if the address space if in supervisor-mode which
+     * is when the processor is at a CPL of zero.
+     * @return <code>true</code> if in supervisor-mode.
+     */
     public boolean isSupervisor()
     {
         return isSupervisor;
     }
 
+    /**
+     * Set the address space to either supervisor or user mode.
+     * <p>
+     * This is used when the processor transition into or out of a CPL of zero,
+     * or when accessing system segments that always perform accesses using
+     * supervisor mode.
+     * @param value <code>true</code> for supervisor, <code>false</code> for user mode.
+     */
     public void setSupervisor(boolean value)
     {
         isSupervisor = value;
@@ -286,37 +217,66 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
         }
     }
 
+    /**
+     * Returns the state of the paging system.
+     * @return <code>true</code> is paging is enabled.
+     */
     public boolean isPagingEnabled()
     {
         return !pagingDisabled;
     }
 
+    /**
+     * Enables or disables paging.
+     * @param value <code>true</code> to enable paging.
+     */
     public void setPagingEnabled(boolean value)
     {
-	if (value) {
-	    if (!((PhysicalAddressSpace)target).getGateA20State())
-		System.err.println("PAGING with GateA20 Masked!!!");
-	}
+        if (value && !target.getGateA20State())
+            LOGGING.log(Level.WARNING, "Paging enabled with A20 masked");
+
         pagingDisabled = !value;
         flush();
     }
 
+    /**
+     * Returns <code>true</code> if the address-space is caching page translations.
+     * <p>
+     * This enables or disables the emulated equivalent of the TLBs (Translation
+     * Look-aside Buffers).
+     * @param value <code>true</code> to enable translation caching.
+     */
     public void setPageCacheEnabled(boolean value)
     {
         pageCacheEnabled = value;
     }
 
+    /**
+     * Enables the use of large (4MB) pages.
+     * @param value <code>true</code> to enable 4MB pages.
+     */
     public void setPageSizeExtensionsEnabled(boolean value)
     {
         pageSizeExtensions = value;
         flush();
     }
 
+    /**
+     * Not as yet implemented
+     * @param value
+     */
     public void setPageWriteThroughEnabled(boolean value)
     {
         //System.err.println("ERR: Write Through Caching enabled for TLBs");        
     }
 
+    /**
+     * Enables the use of global pages (which are harder to flush).
+     * <p>
+     * Global page cache entries are not flushed on a task switch.  Therefore
+     * they are commonly used for system pages (e.g. Linux kernel pages).
+     * @param value <code>true</code> to enable to use of global pages.
+     */
     public void setGlobalPagesEnabled(boolean value)
     {
         if (globalPagesEnabled == value)
@@ -326,28 +286,34 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
         flush();
     }
 
+    /**
+     * Enables the write-protection of user pages for supervisor code.
+     * <p>
+     * When set to <code>false</code> supervisor code can write to write
+     * protected user pages, which is not allowed if this option is enabled.
+     * @param value <code>true</code> to prevent writing to RO user pages.
+     */
     public void setWriteProtectUserPages(boolean value)
     {
 	if (value) {
-	    for (int i=0; i<INDEX_SIZE; i++)
-		nullIndex(writeSupervisorIndex, i);
+            if (writeSupervisorIndex != null)
+                for (int i = 0; i < INDEX_SIZE; i++)
+                    nullIndex(writeSupervisorIndex, i);
 	}
 	    
         writeProtectUserPages = value;
     }
 
-
-    public boolean pagingDisabled()
-    {
-        return pagingDisabled;
-    }
-
+    /**
+     * Clears the entire translation cache.
+     * <p>
+     * This includes both non-global and global pages.
+     */
     public void flush()
     {
-        for (int i=0; i<INDEX_SIZE; i++)
-        {
-	    pageFlags[i] = FOUR_K;
-        }
+        for (int i = 0; i < INDEX_SIZE; i++)
+            pageSize[i] = FOUR_K;
+
         nonGlobalPages.clear();
 
 	readUserIndex = null;
@@ -358,77 +324,72 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
 
     private void partialFlush()
     {
-        if (!globalPagesEnabled)
-        {
+        if (globalPagesEnabled) {
+            for (Integer value : nonGlobalPages) {
+                int index = value.intValue();
+                nullIndex(readSupervisorIndex, index);
+                nullIndex(writeSupervisorIndex, index);
+                nullIndex(readUserIndex, index);
+                nullIndex(writeUserIndex, index);
+                pageSize[index] = FOUR_K;
+            }
+            nonGlobalPages.clear();
+        } else
             flush();
-            return;
-        }
-        
-        Enumeration ee = nonGlobalPages.keys();
-        while (ee.hasMoreElements())
-        {
-            int index = ((Integer) ee.nextElement()).intValue();
-	    nullIndex(readSupervisorIndex, index);
-	    nullIndex(writeSupervisorIndex, index);
-	    nullIndex(readUserIndex, index);
-	    nullIndex(writeUserIndex, index);
-	    pageFlags[index] = FOUR_K;
-        }
-        nonGlobalPages.clear();
-
-        /*
-	  for (int i=0; i<pageFlags.length; i++)
-	  {
-	  if ((pageFlags[i] & IS_GLOBAL_MASK) != 0)
-	  continue;
-	  
-	  readSupervisorIndex[i] = null;
-	  writeSupervisorIndex[i] = null;
-	  readUserIndex[i] = null;
-	  writeUserIndex[i] = null;       
-	  }
-	*/
     }
 
-    private void nullIndex(Memory[] array, int index)
-    {
+    private static void nullIndex(Memory[] array, int index)
+    {        
 	try {
 	    array[index] = null;
 	} catch (NullPointerException e) {}
     }
 
+    /**
+     * Changes the base address of the translation tables and flushes the
+     * translation cache.
+     * <p>
+     * This is executed in response to a task switch, as the new task will have
+     * its own set of page translation entries.  The flush performed here is
+     * only partial and will leave any global entries intact if global pages are
+     * enabled.
+     * @param address new base address of the paging system.
+     */
     public void setPageDirectoryBaseAddress(int address)
     {
         baseAddress = address & 0xFFFFF000;
         partialFlush();
     }
 
+    /**
+     * Invalidate any entries for this address in the translation cache.
+     * <p>
+     * This will cause the next request for an address within the same page to
+     * have to walk the translation tables in memory.
+     * @param offset address within the page to be invalidated.
+     */
     public void invalidateTLBEntry(int offset)
     {
         int index = offset >>> INDEX_SHIFT;
-        if ((pageFlags[index] & IS_4_M_MASK) == 0)
-        {
-	    nullIndex(readSupervisorIndex, index);
-	    nullIndex(writeSupervisorIndex, index);
-	    nullIndex(readUserIndex, index);
-	    nullIndex(writeUserIndex, index);
-            nonGlobalPages.remove(new Integer(index));
-        }
-        else
-        {
-            index = ((offset & 0xFFC00000) >>> 12);
-            for (int i=0; i<1024; i++, index++)
-            {
-		nullIndex(readSupervisorIndex, index);
-		nullIndex(writeSupervisorIndex, index);
-		nullIndex(readUserIndex, index);
-		nullIndex(writeUserIndex, index);
-		nonGlobalPages.remove(new Integer(index));
+        if (pageSize[index] == FOUR_K) {
+            nullIndex(readSupervisorIndex, index);
+            nullIndex(writeSupervisorIndex, index);
+            nullIndex(readUserIndex, index);
+            nullIndex(writeUserIndex, index);
+            nonGlobalPages.remove(Integer.valueOf(index));
+        } else {
+            index &= 0xFFC00;
+            for (int i = 0; i < 1024; i++, index++) {
+                nullIndex(readSupervisorIndex, index);
+                nullIndex(writeSupervisorIndex, index);
+                nullIndex(readUserIndex, index);
+                nullIndex(writeUserIndex, index);
+                nonGlobalPages.remove(Integer.valueOf(index));
             }
         }
     } 
 
-    public Memory validateTLBEntryRead(int offset)
+    private Memory validateTLBEntryRead(int offset)
     {
         int idx = offset >>> INDEX_SHIFT;
         if (pagingDisabled)
@@ -452,17 +413,13 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
         }
 
 	boolean directoryGlobal = globalPagesEnabled && ((0x100 & directoryRawBits) != 0);
-        boolean directoryReadWrite = (0x2 & directoryRawBits) != 0;
+//        boolean directoryReadWrite = (0x2 & directoryRawBits) != 0;
         boolean directoryUser = (0x4 & directoryRawBits) != 0;
         boolean directoryIs4MegPage = ((0x80 & directoryRawBits) != 0) && pageSizeExtensions;
 
-        if (directoryIs4MegPage)
-        {
-            if (!directoryUser)
-            {
-                if (!isSupervisor)
-                    return PF_PROTECTION_VIOLATION_RU;
-            }
+        if (directoryIs4MegPage) {
+            if (!directoryUser && !isSupervisor)
+                return PF_PROTECTION_VIOLATION_RU;
 
             if ((directoryRawBits & 0x20) == 0)
             {
@@ -471,9 +428,6 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
             }
 
             int fourMegPageStartAddress = 0xFFC00000 & directoryRawBits;
-            byte flag = FOUR_M;
-            if (directoryGlobal)
-                flag = FOUR_M_GLOBAL;
 
             if (!pageCacheEnabled)
                 return target.getReadMemoryBlockAt(fourMegPageStartAddress | (offset & 0x3FFFFF));
@@ -483,13 +437,12 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
             {
                 Memory m = target.getReadMemoryBlockAt(fourMegPageStartAddress);
                 fourMegPageStartAddress += BLOCK_SIZE;
-                pageFlags[tableIndex] = flag;
+                pageSize[tableIndex] = FOUR_M;
 		setReadIndexValue(tableIndex++, m);
 		if (directoryGlobal)
                     continue;
 
-                Integer iidx = new Integer(i);
-                nonGlobalPages.put(iidx, iidx);
+                nonGlobalPages.add(Integer.valueOf(i));
             }
 
             return readIndex[idx];
@@ -497,9 +450,9 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
         else 
         {
 	    int directoryBaseAddress = directoryRawBits & 0xFFFFF000;
-	    boolean directoryPageLevelWriteThrough = (0x8 & directoryRawBits) != 0; 
-	    boolean directoryPageCacheDisable = (0x10 & directoryRawBits) != 0; 
-	    boolean directoryDirty = (0x40 & directoryRawBits) != 0;
+//	    boolean directoryPageLevelWriteThrough = (0x8 & directoryRawBits) != 0; 
+//	    boolean directoryPageCacheDisable = (0x10 & directoryRawBits) != 0; 
+//	    boolean directoryDirty = (0x40 & directoryRawBits) != 0;
 
             int tableAddress = directoryBaseAddress | ((offset >>> 10) & 0xFFC);
             int tableRawBits = target.getDoubleWord(tableAddress); 
@@ -514,22 +467,18 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
             }
 
 	    boolean tableGlobal = globalPagesEnabled && ((0x100 & tableRawBits) != 0);
-            boolean tableReadWrite = (0x2 & tableRawBits) != 0;
+//            boolean tableReadWrite = (0x2 & tableRawBits) != 0;
             boolean tableUser = (0x4 & tableRawBits) != 0;
             
             boolean pageIsUser = tableUser && directoryUser;
-            boolean pageIsReadWrite = tableReadWrite || directoryReadWrite;
-            if (pageIsUser)
-                pageIsReadWrite = tableReadWrite && directoryReadWrite;
+//            boolean pageIsReadWrite = tableReadWrite || directoryReadWrite;
+//            if (pageIsUser)
+//                pageIsReadWrite = tableReadWrite && directoryReadWrite;
             
-            if (!pageIsUser)
-            {
-                if (!isSupervisor)
-                    return PF_PROTECTION_VIOLATION_RU;
-            }
+            if (!pageIsUser && !isSupervisor)
+                return PF_PROTECTION_VIOLATION_RU;
 
-            if ((tableRawBits & 0x20) == 0)
-            {
+            if ((tableRawBits & 0x20) == 0) {
                 tableRawBits |= 0x20;
                 target.setDoubleWord(tableAddress, tableRawBits);
             }
@@ -538,22 +487,16 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
             if (!pageCacheEnabled)
                 return target.getReadMemoryBlockAt(fourKStartAddress);
 
-            if (tableGlobal)
-                pageFlags[idx] = FOUR_K_GLOBAL;
-            else
-            {
-                pageFlags[idx] = FOUR_K;
-
-                Integer iidx = new Integer(idx);
-                nonGlobalPages.put(iidx, iidx);
-            }
-                
+            pageSize[idx] = FOUR_K;
+            if (!tableGlobal)
+                nonGlobalPages.add(Integer.valueOf(idx));
+            
 	    setReadIndexValue(idx, target.getReadMemoryBlockAt(fourKStartAddress));
             return readIndex[idx];
 	}
     }
 
-    public Memory validateTLBEntryWrite(int offset)
+    private Memory validateTLBEntryWrite(int offset)
     {
         int idx = offset >>> INDEX_SHIFT;
         if (pagingDisabled)
@@ -619,9 +562,6 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
             }
 
             int fourMegPageStartAddress = 0xFFC00000 & directoryRawBits;
-            byte flag = FOUR_M;
-            if (directoryGlobal)
-                flag = FOUR_M_GLOBAL;
 
             if (!pageCacheEnabled)
                 return target.getWriteMemoryBlockAt(fourMegPageStartAddress | (offset & 0x3FFFFF));
@@ -631,24 +571,23 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
             {
                 Memory m = target.getWriteMemoryBlockAt(fourMegPageStartAddress);
                 fourMegPageStartAddress += BLOCK_SIZE;
-                pageFlags[tableIndex] = flag;
+                pageSize[tableIndex] = FOUR_M;
 		setWriteIndexValue(tableIndex++, m);
  
                 if (directoryGlobal)
                     continue;
 
-                Integer iidx = new Integer(i);
-                nonGlobalPages.put(iidx, iidx);
+                nonGlobalPages.add(Integer.valueOf(i));
             }
-
+            
             return writeIndex[idx];
         }
         else 
         {
 	    int directoryBaseAddress = directoryRawBits & 0xFFFFF000;
-	    boolean directoryPageLevelWriteThrough = (0x8 & directoryRawBits) != 0; 
-	    boolean directoryPageCacheDisable = (0x10 & directoryRawBits) != 0; 
-	    boolean directoryDirty = (0x40 & directoryRawBits) != 0;
+//	    boolean directoryPageLevelWriteThrough = (0x8 & directoryRawBits) != 0; 
+//	    boolean directoryPageCacheDisable = (0x10 & directoryRawBits) != 0; 
+//	    boolean directoryDirty = (0x40 & directoryRawBits) != 0;
 
             int tableAddress = directoryBaseAddress | ((offset >>> 10) & 0xFFC);
             int tableRawBits = target.getDoubleWord(tableAddress); 
@@ -710,32 +649,33 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
             if (!pageCacheEnabled)
                 return target.getWriteMemoryBlockAt(fourKStartAddress);
 
-            if (tableGlobal)
-                pageFlags[idx] = FOUR_K_GLOBAL;
-            else
-            {
-                pageFlags[idx] = FOUR_K;
+            pageSize[idx] = FOUR_K;
 
-                Integer iidx = new Integer(idx);
-                nonGlobalPages.put(iidx, iidx);
-            }
-
+            if (!tableGlobal)
+                nonGlobalPages.add(Integer.valueOf(idx));
+            
 	    setWriteIndexValue(idx, target.getWriteMemoryBlockAt(fourKStartAddress));
             return writeIndex[idx];
 	}
     }
 
-    public Memory getReadMemoryBlockAt(int offset)
+    protected Memory getReadMemoryBlockAt(int offset)
     {
 	return getReadIndexValue(offset >>> INDEX_SHIFT);
     }
 
-    public Memory getWriteMemoryBlockAt(int offset)
+    protected Memory getWriteMemoryBlockAt(int offset)
     {
 	return getWriteIndexValue(offset >>> INDEX_SHIFT);
     }
 
-    void replaceBlocks(Memory oldBlock, Memory newBlock)
+    /**
+     * Calls replace block on the underlying <code>PhysicalAddressSpace</code>
+     * object.
+     * @param oldBlock block to be replaced.
+     * @param newBlock new block to be added.
+     */
+    protected void replaceBlocks(Memory oldBlock, Memory newBlock)
     {
 	try {
 	    for (int i = 0; i < INDEX_SIZE; i++)
@@ -869,17 +809,25 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
         }
     }
 
+    /**
+     * Clears the underlying <code>PhysicalAddressSpace of this object.</code>
+     */
     public void clear()
     {
         target.clear();
     }
 
-    public int execute(Processor cpu, int offset)
+    public int executeReal(Processor cpu, int offset)
+    {
+        throw new IllegalStateException("Cannot execute a Real Mode block in linear memory");
+    }
+
+    public int executeProtected(Processor cpu, int offset)
     {
 	Memory memory = getReadMemoryBlockAt(offset);
 
 	try {
-	    return memory.execute(cpu, offset & AddressSpace.BLOCK_MASK);
+	    return memory.executeProtected(cpu, offset & AddressSpace.BLOCK_MASK);
 	} catch (NullPointerException n) {
 	    memory = validateTLBEntryRead(offset); //memory object was null (needs mapping)
 	} catch (ProcessorException p) {
@@ -887,60 +835,71 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
 	}
 
 	try {
-	    return memory.execute(cpu, offset & AddressSpace.BLOCK_MASK);
+	    return memory.executeProtected(cpu, offset & AddressSpace.BLOCK_MASK);
 	} catch (ProcessorException p) {
-	    cpu.handleProtectedModeException(p.getVector(), p.hasErrorCode(), p.getErrorCode());
+	    cpu.handleProtectedModeException(p);
+	    return 1;
+	} catch (IllegalStateException e) {
+            System.out.println("Current eip = " + Integer.toHexString(cpu.eip));
+            throw e;
+        }
+    }
+
+    public int executeVirtual8086(Processor cpu, int offset)
+    {
+	Memory memory = getReadMemoryBlockAt(offset);
+
+	try {
+	    return memory.executeVirtual8086(cpu, offset & AddressSpace.BLOCK_MASK);
+	} catch (NullPointerException n) {
+	    memory = validateTLBEntryRead(offset); //memory object was null (needs mapping)
+	} catch (ProcessorException p) {
+	    memory = validateTLBEntryRead(offset); //memory object caused a page fault (double check)
+	}
+
+	try {
+	    return memory.executeVirtual8086(cpu, offset & AddressSpace.BLOCK_MASK);
+	} catch (ProcessorException p) {
+	    cpu.handleProtectedModeException(p);
 	    return 1;
 	}
     }
-    
-    public CodeBlock decodeCodeBlockAt(Processor cpu, int offset)
+
+    public static final class PageFaultWrapper implements Memory
     {
-	Memory memory = getReadMemoryBlockAt(offset);
+        private final ProcessorException pageFault;
 
-
-	try {
-	    return memory.decodeCodeBlockAt(cpu, offset & AddressSpace.BLOCK_MASK);
-	} catch (NullPointerException n) {
-	    memory = validateTLBEntryRead(offset); //memory object was null (needs mapping)
-	} catch (ProcessorException p) {
-	    memory = validateTLBEntryRead(offset); //memory object caused a page fault (double check)
-	}
-
-	CodeBlock block= memory.decodeCodeBlockAt(cpu, offset & AddressSpace.BLOCK_MASK);
-	return block;
-    }
-
-    public static final class PageFaultWrapper extends Memory
-    {
-        private ProcessorException pageFault;
-
-        public PageFaultWrapper(int errorCode)
+        private PageFaultWrapper(int errorCode)
         {
-            pageFault = new ProcessorException(Processor.PROC_EXCEPTION_PF, errorCode, true);
+            pageFault = new ProcessorException(ProcessorException.Type.PAGE_FAULT, errorCode, true);
         }
 
-        private final void fill()
+        public ProcessorException getException() 
+        {
+            return pageFault;
+        }
+        
+        private void fill()
         {
             //pageFault.fillInStackTrace();
         }
 
-        public ProcessorException getFault()
+        public boolean isAllocated()
         {
-            return pageFault;
+            return false;
         }
-
+        
         public void clear() {}
 
         public void clear(int start, int length) {}
 
-        public void copyContentsInto(int address, byte[] buffer, int off, int len)
+        public void copyContentsIntoArray(int address, byte[] buffer, int off, int len)
         {
             fill();
             throw pageFault;
         }
 
-        public void copyContentsFrom(int address, byte[] buffer, int off, int len)
+        public void copyArrayIntoContents(int address, byte[] buffer, int off, int len)
         {
             fill();
             throw pageFault;
@@ -1023,17 +982,31 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
             throw pageFault;
         }
 
-	public int execute(Processor cpu, int offset)
+        public int executeReal(Processor cpu, int offset)
+        {
+            throw new IllegalStateException("Cannot execute a Real Mode block in linear memory");
+        }
+
+	public int executeProtected(Processor cpu, int offset)
 	{
 	    fill();
 	    throw pageFault;
 	}
-	
-	public CodeBlock decodeCodeBlockAt(Processor cpu, int offset)
+
+        public int executeVirtual8086(Processor cpu, int offset)
 	{
 	    fill();
 	    throw pageFault;
 	}
+        
+        public String toString()
+        {
+            return "PF " + pageFault;
+        }
+
+        public void loadInitialContents(int address, byte[] buf, int off, int len) {
+            throw new UnsupportedOperationException("Not supported yet.");
+        }
     }
 
     public void reset()
@@ -1069,14 +1042,16 @@ public final class LinearAddressSpace extends AddressSpace implements HardwareCo
     public void acceptComponent(HardwareComponent component)
     {
 	if (component instanceof PhysicalAddressSpace)
-	    target = (AddressSpace) component;
+	    target = (PhysicalAddressSpace) component;
     }
-
-    public void timerCallback() {}
 
     public String toString()
     {
         return "Linear Address Space";
+    }
+
+    public void loadInitialContents(int address, byte[] buf, int off, int len) {
+        throw new UnsupportedOperationException("Not supported yet.");
     }
 }
 
